# learn-it-here

./: .gitignore  .pre-commit-config.yaml  .vercelignore  Makefile  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt  vercel.json
.streamlit/: config.toml  secrets.toml.example
components/: content.py  css.py  dialogs.py  footer.py  forms.py  header.py  panda.py
database/: schema.sql
docs/mockups/: 01-landing.html  02-requirements.html  03-learning-hub.html  04-topic.html  05-git-tabs.html  06-suggestions.html  07-comparison.html  _shared.css  index.html
nextjs-app/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json
nextjs-app/app/: globals.css  layout.tsx  page.tsx
nextjs-app/app/learning-hub/: LearningHubClient.tsx  page.tsx
nextjs-app/app/projectrequirements/: RequirementsForm.tsx  page.tsx
nextjs-app/components/: CodeBlock.tsx  ContentTable.tsx  SiteFooter.tsx  SiteHeader.tsx  TopicSuggestions.tsx
nextjs-app/content/: CSharp.tsx  DotNet.tsx  EFCoreOracle.tsx  Linq.tsx  VSCode.tsx  VisualStudio.tsx
nextjs-app/db/: schema.sql
nextjs-app/lib/: db.ts  learn-sections.ts  steps.ts  types.ts
nextjs-app/scripts/: migrate-supabase-to-neon.ts
pages/: landing.py  requirements.py
pages/learn/: __init__.py  blazor.py  blazor_cqrs.py  blazor_fluent_ui.py  blazor_oracle_efcore_dapper.py  blazor_webforms_comparison.py  csharp.py  dotnet.py  efcore.py  git.py  linq.py  sql_developer.py  sql_query_comparison.py  topic_suggestions.py  unit_testing.py  visual_studio.py  vscode.py
services/: pdf_service.py  supabase_client.py
styles/: theme.css
tests/: conftest.py  test_forms.py  test_models.py  test_pdf.py  test_routing.py
(+16 files in other folders)
