[project]
name = "learn-it-here"
version = "0.2.0"
description = "Capture project requirements and surface curated learning content."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.36,<2.0",
    "supabase>=2.3,<3.0",
    "fpdf2>=2.7.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.7,<5.0",
]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
]
ignore = [
    "E501",  # long lines — handled by formatter, allow exceptions in HTML strings
    "B008",  # default-argument function call — common with Streamlit constants
]

[tool.ruff.lint.per-file-ignores]
# Tests can be looser about imports / unused vars.
"tests/*" = ["F401", "F811"]
# The panda module is mostly inline HTML/CSS strings.
"components/panda.py" = ["E501"]
"components/footer.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
